Closed
Bug 305813
Opened 20 years ago
Closed 20 years ago
Error pages not read by screen reader
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
Details
(Keywords: access, fixed1.8, Whiteboard: [ETA: needs approval before bug 306750 can go in])
Attachments
(1 file)
|
17.33 KB,
patch
|
Biesinger
:
review+
jst
:
superreview+
asa
:
approval1.8b4+
|
Details | Diff | Splinter Review |
The error pages used by Gecko are not getting the correct doc finished loading
events exposed through MSAA. Actually the events are being fired on the old
page, so the previous page is being read instead.
| Assignee | ||
Comment 1•20 years ago
|
||
I have a patch forthcoming which uses DOMContentLoaded, which gets fired for XUL
error pages and also has the benefit of firing before images are loaded, which
is a great benefit to screen reader users.
Flags: blocking1.8b4?
Comment 2•20 years ago
|
||
this is late to the party, but we'll take it subject to a low-risk patch.
Flags: blocking1.8b4? → blocking1.8b4+
| Assignee | ||
Comment 3•20 years ago
|
||
1) Use DOMContentLoaded to fire load event when a new page is ready,
2) Don't fire load done for failed load in OnStateChange,
3) Cache busy state on nsDocAccessible (mIsContentLoaded),
4) Fix a comment in AddEventListeners
5) Use better focus check to determine whether complete page load event should
be fired
6) Use cached mIsContentLoaded state to prevent double events from being fired
This patch fixes also some occasions where the screen reader would load the
page twice.
Attachment #193926 -
Flags: superreview?(brendan)
Attachment #193926 -
Flags: review?(cbiesinger)
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [ETA: as soon as I get reviews]
| Assignee | ||
Updated•20 years ago
|
Attachment #193926 -
Flags: superreview?(brendan) → superreview?(jst)
Comment 4•20 years ago
|
||
Comment on attachment 193926 [details] [diff] [review]
Changes listed in bug comment. Changes only in accessibility module. Thoroughly tested.
+ NS_ASSERTION(treeItem, "No docshelltreeitem for doc aAccessible");
shouldn't that be "for doc aDocNode"?
Attachment #193926 -
Flags: review?(cbiesinger) → review+
Updated•20 years ago
|
Whiteboard: [ETA: as soon as I get reviews] → [needs SR jst]
| Assignee | ||
Comment 5•20 years ago
|
||
I have a test build based on branch with this patch:
http://ftp.mozilla.org/pub/mozilla.org/mozilla/accessibility/firefox/firefox-8-26-2005-branch-1.5-a11y-win32.exe
The screen reader vendors have QA tested with this build and give it a thumbs up.
Comment 6•20 years ago
|
||
Comment on attachment 193926 [details] [diff] [review]
Changes listed in bug comment. Changes only in accessibility module. Thoroughly tested.
sr=jst
Attachment #193926 -
Flags: superreview?(jst) → superreview+
| Assignee | ||
Updated•20 years ago
|
Attachment #193926 -
Flags: approval1.8b4?
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [needs SR jst] → [ETA: needs approval]
Comment 7•20 years ago
|
||
Comment on attachment 193926 [details] [diff] [review]
Changes listed in bug comment. Changes only in accessibility module. Thoroughly tested.
-'d for approval1.8b4. patch needs to get in and bake on the trunk for a
couple of days with verification that it works and doesn't cause additional
regressions before we'll consider for branch.
Attachment #193926 -
Flags: approval1.8b4? → approval1.8b4-
Comment 8•20 years ago
|
||
Comment on attachment 193926 [details] [diff] [review]
Changes listed in bug comment. Changes only in accessibility module. Thoroughly tested.
re-requesting approval. we need to get this verified on the trunk first though.
Attachment #193926 -
Flags: approval1.8b4- → approval1.8b4?
| Assignee | ||
Comment 9•20 years ago
|
||
This change requires the checkin for bug 306750 to work without crashing on some
pages during Alt+Left.
Whiteboard: [ETA: needs approval] → [ETA: needs approval at same time of approval for bug 306750 ]
| Assignee | ||
Comment 10•20 years ago
|
||
I'm going to mark verified for the screen reader vendor who tested this both on
trunk and with the build I posted on ftp, and said it works great. The ftp build
was here:
http://ftp.mozilla.org/pub/mozilla.org/mozilla/accessibility/firefox/firefox-8-26-2005-branch-1.5-a11y-win32.exe
Status: RESOLVED → VERIFIED
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [ETA: needs approval at same time of approval for bug 306750 ] → [ETA: needs approval before bug 306750 can go in]
Updated•20 years ago
|
Attachment #193926 -
Flags: approval1.8b4? → approval1.8b4+
Comment 11•7 years ago
|
||
Keywords: sec508
You need to log in
before you can comment on or make changes to this bug.
Description
•