Bug 305813. Error pages not read by screen reader