accessible/src/base/nsDocAccessible.h
@@ -116,6 +116,7 @@ class nsDocAccessible : public nsBlockAccessible,
     nsCOMPtr<nsITimer> mFireEventTimer;
     nsCOMPtr<nsIEditor> mEditor; // Editor, if there is one
     PRUint16 mScrollPositionChangedTicks; // Used for tracking scroll events
+    PRPackedBool mIsContentLoaded;
     nsCOMArray<nsIAccessibleEvent> mEventsToFire;
 };
 
